--- a/myportfolio/portfolio/templates/portfolio/home.html
+++ b/myportfolio/portfolio/templates/portfolio/home.html
@@ -8,17 +8,20 @@
     </div>
 
     <div class="hero-text">
-        <h5>Hi I'm <span class="input">Backend Developer</span></h5>
+       
         <h1>Abdullah Tahir</h1>
-        <p>I'm a Backend Developer, building scalable and efficient backend systems,
-            where data flows smoothly and users interact seamlessly.
+        <h5>Hi I'm <span class="input"></span></h5>
+        <p>
+          Hi, I’m a Backend & Django Developer exploring AI. I build scalable
+          systems with Django and Python, and I’m learning to add smart features
+          like recommendations, automation, and data-driven insights.
         </p>
-
+  
         <div class="btn-group">
-            <a href="{% url 'download_cv' %}" class="btn active">Download CV</a>
-            <a href="{% url 'projects' %}" class="btn">Learn More</a>  <!-- Learn More button -->
+          <a href="{% url 'download_cv' %}" class="btn active">Download CV</a>
+          <a href="{% url 'projects' %}" class="btn">Learn More</a>
         </div>
-    </div>
+      </div>
 </div>
 
 <!-- Display a few projects on the homepage -->
@@ -55,8 +58,11 @@
 </div>
 
 <!-- Contact Section (Simplified) -->
+
 <div class="contact-section">
+    
     <h2>Contact Me</h2>
+    <div class="projects-decoration"></div>
     <p>If you would like to get in touch, feel free to reach out to me through the following:</p>
     <div class="contact-info">
         <p>Email: <a href="mailto:abdullahtahir4200@gmail.com">abdullahtahir4200@gmail.com</a></p>  <!-- Replace with your email -->
