--- a/myportfolio/portfolio/templates/portfolio/base.html
+++ b/myportfolio/portfolio/templates/portfolio/base.html
@@ -10,15 +10,14 @@
     <!-- Font Awesome CDN for icons -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="{% static 'style/main.css' %}" />
+
+    <!-- Typed.js CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   </head>
 
   <body>
@@ -28,7 +27,7 @@
           <i class="fa-solid fa-a"></i>
           <span class="brand-name">Abdullah Tahir</span>
         </a>
-    
+
         <nav class="main-nav">
           <button class="nav-toggle" aria-label="Toggle menu">
             <span></span>
@@ -44,9 +43,10 @@
         </nav>
       </div>
     </header>
-    
-    
-    <main>{% block content %} {% endblock content %}</main>
+
+    <main>{% block content %}{% endblock content %}</main>
+
+   
 
     <div class="projects-decoration"></div>
 
@@ -55,17 +55,13 @@
         <div class="social">
           <p>© 2025 Abdullah Tahir. All rights reserved.</p>
           <div class="social-icons">
-            <a href="#" target="_blank"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
             <a
               href="https://www.linkedin.com/in/abdullah-tahir-23ntucs1004/"
               target="_blank"
               ><i class="fa-brands fa-linkedin"></i
             ></a>
-            <a href="#" target="_blank"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://github.com/AbdullahbinTahir42" target="_blank"
               ><i class="fa-brands fa-github"></i
             ></a>
@@ -74,8 +70,7 @@
       </div>
     </footer>
 
-    <!-- Typed.js for typing text effect -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
+    <!-- Custom Script -->
     <script src="{% static 'js/main.js' %}"></script>
   </body>
 </html>
