--- a/myportfolio/static/style/main.css
+++ b/myportfolio/static/style/main.css
@@ -288,7 +288,8 @@ body {
 .header-container {
   max-width: 1200px;
   margin: 0 auto;
-  padding-top: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
